# particle-effect

./: .gitignore  CMakeLists.txt  LICENSE
include/: Input.h  Particle.h  ParticleController.h  ParticleViewer.h  Window.h  shader.h
include/glad/: glad.h
shaders/: particle.fs  particle.vs
src/: Input.cpp  Window.cpp  glad.c  main.cpp
src/Controller/: ParticleController.cpp
src/Viewer/: ParticleViewer.cpp
